upadte october 30 day challenge